--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Midwest RP - Home</title>
-    <link rel="stylesheet" href="style.css"> <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="https://dhananjaya0118.github.io/Midwest/style.css"> <!-- Link to external CSS file -->
 </head>
 <body>
     <header>
